--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "testing 123",
+    "lint": "eslint .",
     "build:ui": "rm -rf build && cd ../part2/phonebook && npm run build --prod && cp -r build /Users/adrien/coding/courses/full-stack-open/part3",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
@@ -31,6 +32,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.25.0",
     "nodemon": "^2.0.7"
   }
 }
